[win] Add test for setting read-only permission.

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -131,6 +131,12 @@ seaf_daemon_LDADD = $(top_builddir)/lib/libseafile_common.la \
 
 seaf_daemon_LDFLAGS = @STATIC_COMPILE@ @CONSOLE@
 
+set_ro_SOURCES = set-ro.c
+
+set_ro_LDADD = $(top_builddir)/lib/libseafile_common.la @GLIB2_LIBS@
+
+set_ro_LDFLAGS = @STATIC_COMPILE@ @CONSOLE@
+
 # seaf_tool_CFLAGS = $(AM_CFLAGS) -DSEAF_TOOL
 
 # seaf_tool_SOURCES = seaf-tool.c $(common_src) 
